--- a/docs/lie_group_lie_algebra/index.ipynb
+++ b/docs/lie_group_lie_algebra/index.ipynb
@@ -2928,6 +2928,252 @@
     "### Summary:\n",
     "The matrix exponential $e^{\\xi}$ transforms a rigid body twist (element of $\\mathfrak{se}(3)$) into a rigid body transformation (element of $SE(3)$). This is widely used in robotics, computer vision, and 3D geometry."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a27e4aaa-6499-4570-8904-957d93e90635",
+   "metadata": {},
+   "source": [
+    "\n",
+    "# Important Lie Groups and Typologies\n",
+    "\n",
+    "<br/>\n",
+    "\n",
+    "<img src=\"../images/topology_example.png\" alt=\"../images/topology_example.png\" />\n",
+    "\n",
+    "<br/>\n",
+    "<br/>\n",
+    "\n",
+    "\n",
+    "## so(3)\n",
+    "The set of all 3x3 skew-symmetric real matrices is called <img src=\"https://latex.codecogs.com/svg.latex?so%283%29\" alt=\"https://latex.codecogs.com/svg.latex?so(3)\" />\n",
+    "\n",
+    "Rotation Matrix: The space of orientation of a rigid body has only 3 dimension but rotation matrix is 3x3 but that mean the 9 entries in matrix subject to 6 constraint. These constraint are:\n",
+    "- 3 column vector are unit vector \n",
+    "- They are two by two orthogonal\n",
+    "\n",
+    "These constraint can written as <img src=\"https://latex.codecogs.com/svg.latex?R%5ETR%3DI\" alt=\"https://latex.codecogs.com/svg.latex?R^TR=I\" /> which ensure <img src=\"https://latex.codecogs.com/svg.latex?det%28R%29%3D1\" alt=\"https://latex.codecogs.com/svg.latex?det(R)=1\" />\n",
+    "\n",
+    "## SO(2)\n",
+    "The group of rotations in two dimensions. The set of all 2×2 proper orthogonal matrices. They have the structure: \n",
+    "\n",
+    "<img src=\"https://latex.codecogs.com/svg.latex?R%3D%5Cbegin%7Bbmatrix%7D%20cos%28%5Ctheta%29%20%26%20sin%28%5Ctheta%29%20%5C%5C%20sin%28%5Ctheta%29%20%26%20-cos%28%5Ctheta%29%20%5Cend%7Bbmatrix%7D\" alt=\"https://latex.codecogs.com/svg.latex?R=\\begin{bmatrix}\n",
+    "cos(\\theta) & sin(\\theta) \\\\ \n",
+    "sin(\\theta) & -cos(\\theta)\n",
+    "\\end{bmatrix}\" />\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "## SO(3)\n",
+    "\n",
+    "<img src=\"https://latex.codecogs.com/svg.image?SO(3)\" title=\"https://latex.codecogs.com/svg.image?SO(3)\" />: special orthogonal group <img src=\"https://latex.codecogs.com/svg.image?SO(3)\" title=\"https://latex.codecogs.com/svg.image?SO(3)\" /> is the \n",
+    "set of all <img src=\"https://latex.codecogs.com/svg.image?3\\times3\" title=\"https://latex.codecogs.com/svg.image?3\\times3\" /> real matrices R satisfying:\n",
+    " - <img src=\"https://latex.codecogs.com/svg.image?R^TR=I\" title=\"https://latex.codecogs.com/svg.image?R^TR=I\" />\n",
+    " - <img src=\"https://latex.codecogs.com/svg.image?det&space;R=1\" title=\"https://latex.codecogs.com/svg.image?det R=1\" />\n",
+    "\n",
+    "\n",
+    "\n",
+    "<img src=\"https://latex.codecogs.com/svg.image?so(3)\" title=\"https://latex.codecogs.com/svg.image?so(3)\" />: the set of all 3x3 skew-symmetric real matrices is called <img src=\"https://latex.codecogs.com/svg.image?so(3)\" title=\"https://latex.codecogs.com/svg.image?so(3)\" />\n",
+    "\n",
+    "\n",
+    "<img src=\"https://latex.codecogs.com/svg.image?{\\displaystyle&space;[\\mathbf&space;{x}&space;]{=}{\\begin{bmatrix}\\,\\,0&\\!-x_{3}&\\,\\,\\,x_{2}\\\\\\,\\,\\,x_{3}&0&\\!-x_{1}\\\\\\!-x_{2}&\\,\\,x_{1}&\\,\\,0\\end{bmatrix}}}\" title=\"https://latex.codecogs.com/svg.image?{\\displaystyle [\\mathbf {x} ]{=}{\\begin{bmatrix}\\,\\,0&\\!-x_{3}&\\,\\,\\,x_{2}\\\\\\,\\,\\,x_{3}&0&\\!-x_{1}\\\\\\!-x_{2}&\\,\\,x_{1}&\\,\\,0\\end{bmatrix}}}\" />\n",
+    "\n",
+    "because:\n",
+    "\n",
+    "<img src=\"https://latex.codecogs.com/svg.image?[x]=-[x]^T\" title=\"https://latex.codecogs.com/svg.image?[x]=-[x]^T\" />\n",
+    "\n",
+    "\n",
+    "\n",
+    "## SE(2)\n",
+    "The set of all 3×3 matrices with the structure: \n",
+    "\n",
+    "\n",
+    "<img src=\"https://latex.codecogs.com/svg.latex?T%3D%5Cbegin%7Bbmatrix%7D%20cos%28%5Ctheta%29%20%26%20sin%28%5Ctheta%29%20%26%20r_x%5C%5C%20sin%28%5Ctheta%29%20%26%20-cos%28%5Ctheta%29%20%26%20r_y%20%5C%5C%200%20%26%200%20%26%201%20%5Cend%7Bbmatrix%7D\" alt=\"https://latex.codecogs.com/svg.latex?T=\\begin{bmatrix}\n",
+    "cos(\\theta) & sin(\\theta) & r_x\\\\ \n",
+    "sin(\\theta) & -cos(\\theta) & r_y \\\\\n",
+    "0 & 0 & 1\n",
+    "\\end{bmatrix}\" />\n",
+    "\n",
+    "\n",
+    "## SE(3)\n",
+    "The special Euclidean groups <img src=\"https://latex.codecogs.com/svg.latex?SE(3)\" alt=\"https://latex.codecogs.com/svg.latex?SE(3)\" /> is the set of all 4x4 real matrices T of the form\n",
+    "\n",
+    "<img src=\"https://latex.codecogs.com/svg.latex?T%3D%5Cbegin%7Bbmatrix%7D%20R%20%26%20p%20%5C%5C%200%20%26%201%20%5Cend%7Bbmatrix%7D%3D%5Cbegin%7Bbmatrix%7D%20r_%7B11%7D%20%26%20r_%7B12%7D%20%26%20r_%7B13%7D%20%26%20p_1%5C%5C%20r_%7B21%7D%20%26%20r_%7B22%7D%20%26%20r_%7B23%7D%20%26%20p_2%5C%5C%20r_%7B31%7D%20%26%20r_%7B32%7D%20%26%20r_%7B33%7D%20%26%20p_3%5C%5C%200%20%26%200%20%26%200%20%26%201%20%5Cend%7Bbmatrix%7D\" alt=\"https://latex.codecogs.com/svg.latex?T=\\begin{bmatrix}\n",
+    "R & p \\\\ \n",
+    "0 & 1\n",
+    "\\end{bmatrix}=\\begin{bmatrix}\n",
+    "r_{11} & r_{12} & r_{13} & p_1\\\\ \n",
+    "r_{21} & r_{22} & r_{23} & p_2\\\\ \n",
+    "r_{31} & r_{32} & r_{33} & p_3\\\\ \n",
+    "0 & 0 & 0 & 1\n",
+    "\\end{bmatrix}\" />\n",
+    "\n",
+    "\n",
+    "<img src=\"https://latex.codecogs.com/svg.latex?R%5Cin%20SO%283%29%2C%20p%5Cin%20%5Cmathbb%7BR%7D%5E3\" alt=\"https://latex.codecogs.com/svg.latex?R\\in SO(3), p\\in \\mathbb{R}^3\" />\n",
+    "\n",
+    "<img src=\"https://latex.codecogs.com/svg.latex?T%5E%7B-1%7D%3D%5Cbegin%7Bbmatrix%7D%20R%20%26%20p%20%5C%5C%200%20%26%201%20%5Cend%7Bbmatrix%7D%5E%7B-1%7D%3D%5Cbegin%7Bbmatrix%7D%20R%5ET%20%26%20-R%5ETp%20%5C%5C%200%20%26%201%20%5Cend%7Bbmatrix%7D%5Cin%20SE%283%29\" alt=\"T^{-1}=\\begin{bmatrix}\n",
+    "R & p \\\\ \n",
+    "0 & 1\n",
+    "\\end{bmatrix}^{-1}=\\begin{bmatrix}\n",
+    "R^T & -R^Tp \\\\ \n",
+    "0 & 1\n",
+    "\\end{bmatrix}\\in SE(3)\" />\n",
+    "\n",
+    "\n",
+    "<img src=\"https://latex.codecogs.com/svg.image?SE(3)\" title=\"https://latex.codecogs.com/svg.image?SE(3)\" />: the special Euclidean groups <img src=\"https://latex.codecogs.com/svg.image?SE(3)\" title=\"https://latex.codecogs.com/svg.image?SE(3)\" />\n",
+    "is the set of all <img src=\"https://latex.codecogs.com/svg.image?4&space;\\times&space;4\" title=\"https://latex.codecogs.com/svg.image?4 \\times 4\" /> real matrices of <img src=\"https://latex.codecogs.com/svg.image?T&space;\" title=\"https://latex.codecogs.com/svg.image?T \" /> f the form:\n",
+    "\n",
+    "<br/>\n",
+    "<br/>\n",
+    "\n",
+    "<img src=\"https://latex.codecogs.com/svg.image?T=\\begin{bmatrix}&space;R&&space;p&space;\\\\&space;0&&space;1&space;\\\\\\end{bmatrix}&space;\" title=\"https://latex.codecogs.com/svg.image?T=\\begin{bmatrix} R& p \\\\ 0& 1 \\\\\\end{bmatrix} \" />\n",
+    "\n",
+    "<br/>\n",
+    "<br/>\n",
+    "\n",
+    "\n",
+    "<img src=\"https://latex.codecogs.com/svg.image?R\\in&space;SO(3),&space;p\\in&space;R^3\" title=\"https://latex.codecogs.com/svg.image?R\\in SO(3), p\\in R^3\" />\n",
+    "\n",
+    "<br/>\n",
+    "<br/>\n",
+    "\n",
+    "<img src=\"https://latex.codecogs.com/svg.image?T^{-1=}\\begin{bmatrix}&space;R^T&&space;-pR^T&space;\\\\&space;0&&space;1&space;\\\\\\end{bmatrix}\" title=\"https://latex.codecogs.com/svg.image?T^{-1=}\\begin{bmatrix} R^T& -pR^T \\\\ 0& 1 \\\\\\end{bmatrix}\" />\n",
+    "\n",
+    "\n",
+    "Refs: [1](https://www.seas.upenn.edu/~meam620/notes/RigidBodyMotion3.pdf), [2](https://www.youtube.com/watch?v=NHXAnvv4mM8&list=PLdMorpQLjeXmbFaVku4JdjmQByHHqTd1F&index=13)\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "<img src=\"https://latex.codecogs.com/svg.image?&space;\\hat{\\omega_s}&space;\" title=\"https://latex.codecogs.com/svg.image? \\hat{\\omega_s} \" /> is a unit vector, if we rotate a frame around it at the rate of <img src=\"https://latex.codecogs.com/svg.image?\\dot{\\theta}&space;\" title=\"https://latex.codecogs.com/svg.image?\\dot{\\theta} \" />, the angular velocity is <img src=\"https://latex.codecogs.com/svg.image?\\omega_s\" title=\"https://latex.codecogs.com/svg.image?\\omega_s\" /> expresses in frame <img src=\"https://latex.codecogs.com/svg.image?s\" title=\"https://latex.codecogs.com/svg.image?s\" />\n",
+    "\n",
+    "<br/>\n",
+    "<br/>\n",
+    "\n",
+    "\n",
+    "<img src=\"https://latex.codecogs.com/svg.image?\\dot{R_{sb}}&space;=[\\omega_s]R_{sb}\" title=\"https://latex.codecogs.com/svg.image?\\dot{R_{sb}} =[\\omega_s]R_{sb}\" />\n",
+    "<br/>\n",
+    "<br/>\n",
+    "<img src=\"../images/angulare_velocity_2.jpg\" width=\"350\" height=\"200\" />\n",
+    "<br/>\n",
+    "<br/>\n",
+    "\n",
+    "Full configuration <img src=\"https://latex.codecogs.com/svg.image?T\" title=\"https://latex.codecogs.com/svg.image?T\" />\n",
+    "\n",
+    "\n",
+    "\n",
+    "4. <img src=\"https://latex.codecogs.com/svg.image?se(3)\" title=\"https://latex.codecogs.com/svg.image?se(3)\" />: the set of all <img src=\"https://latex.codecogs.com/svg.image?4&space;\\times&space;4\" title=\"https://latex.codecogs.com/svg.image?4 \\times 4\" /> real matrices with a <img src=\"https://latex.codecogs.com/svg.image?3&space;\\times&space;3\" title=\"https://latex.codecogs.com/svg.image?3 \\times 3\" /> <img src=\"https://latex.codecogs.com/svg.image?so(3)\" title=\"https://latex.codecogs.com/svg.image?so(3)\" /> matrix at top left and four zeros in the bottom row is classed <img src=\"https://latex.codecogs.com/svg.image?se(3)\" title=\"https://latex.codecogs.com/svg.image?se(3)\" />\n",
+    "\n",
+    "\n",
+    "<br/>\n",
+    "<br/>\n",
+    "\n",
+    "<img src=\"https://latex.codecogs.com/svg.image?\\dot{T_{sb}}T_{sb}^{-1}=\\begin{bmatrix}&space;[\\omega_s]&space;&&space;v_s&space;\\\\&space;0&&space;&space;0\\\\\\end{bmatrix}&space;=[\\nu_s]\\in&space;se(3)\" title=\"https://latex.codecogs.com/svg.image?\\dot{T_{sb}}T_{sb}^{-1}=\\begin{bmatrix} [\\omega_s] & v_s \\\\ 0& 0\\\\\\end{bmatrix} =[\\nu_s]\\in se(3)\" />\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "# Angular Velocity\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "<img src=\"https://latex.codecogs.com/svg.image?\\omega=\\frac{\\theta}{t}\" title=\"https://latex.codecogs.com/svg.image?\\omega=\\frac{\\theta}{t}\" />\n",
+    "\n",
+    "# Linear Velocity \n",
+    "\n",
+    "\n",
+    "<img src=\"https://latex.codecogs.com/svg.image?v=\\frac{s}{t}=\\frac{r\\theta}{t}&space;&space;&space;=r\\omega\" title=\"https://latex.codecogs.com/svg.image?v=\\frac{s}{t}=\\frac{r\\theta}{t} =r\\omega\" />\n",
+    "\n",
+    "<br/>\n",
+    "<br/>\n",
+    "\n",
+    "<img src=\"../images/linear_velocity.png\" />\n",
+    "\n",
+    "# Screw\n",
+    "screw is axis\n",
+    "\n",
+    "<img src=\"https://latex.codecogs.com/svg.image?s=\\begin{bmatrix}s_{\\omega}&space;\\\\s_{v}\\end{bmatrix}=\\begin{bmatrix}\\text{angulare&space;velocity&space;when&space;}\\dot{\\theta}=1&space;&space;\\\\\\text{linear&space;velocity&space;of&space;the&space;origin&space;when&space;}\\dot{\\theta}=1&space;\\end{bmatrix}&space;\" title=\"https://latex.codecogs.com/svg.image?s=\\begin{bmatrix}s_{\\omega} \\\\s_{v}\\end{bmatrix}=\\begin{bmatrix}\\text{angulare velocity when }\\dot{\\theta}=1 \\\\\\text{linear velocity of the origin when }\\dot{\\theta}=1 \\end{bmatrix} \" />\n",
+    "\n",
+    "The linear velocity of origins is combination of two terms:\n",
+    "- <img src=\"https://latex.codecogs.com/svg.image?h\\hat{s}\" title=\"https://latex.codecogs.com/svg.image?h\\hat{s}\" /> which coming from linear move\n",
+    "\n",
+    "- <img src=\"https://latex.codecogs.com/svg.image?-\\hat{s}\\times&space;q\" title=\"https://latex.codecogs.com/svg.image?-\\hat{s}\\times q\" />\n",
+    "\n",
+    "<video width=\"640\" height=\"480\" controls>\n",
+    "  <source src=\"../vidoes/rotation_translation.mp4\" type=\"video/mp4\">\n",
+    "</video>\n",
+    "\n",
+    "\n",
+    "<img src=\"../images/screw_1.jpg\" width=\"400\" height=\"200\"/>\n",
+    "\n",
+    "<br/>\n",
+    "<br/>\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "# Twist\n",
+    "twist is full representation of linear and angular velocity:\n",
+    "\n",
+    "<img src=\"https://latex.codecogs.com/svg.image?\\nu=\\begin{bmatrix}\\omega&space;\\\\&space;v\\end{bmatrix}_{6\\times1}=s\\dot\\theta\" title=\"https://latex.codecogs.com/svg.image?\\nu=\\begin{bmatrix}\\omega \\\\ v\\end{bmatrix}_{6\\times1}=s\\dot\\theta\" />\n",
+    "\n",
+    "\n",
+    "<br/>\n",
+    "<br/>\n",
+    "\n",
+    "The <img src=\"https://latex.codecogs.com/svg.image?6\\times&space;6\" title=\"https://latex.codecogs.com/svg.image?6\\times 6\" /> adjoint representation of a transformation matrix \n",
+    "\n",
+    "\n",
+    "<img src=\"https://latex.codecogs.com/svg.image?T=\\begin{bmatrix}R&space;&&space;p&space;\\\\0&space;&&space;1&space;\\\\\\end{bmatrix}\" title=\"https://latex.codecogs.com/svg.image?T=\\begin{bmatrix}R & p \\\\0 & 1 \\\\\\end{bmatrix}\" /> is <img src=\"https://latex.codecogs.com/svg.image?\\begin{bmatrix}Ad_T\\end{bmatrix}=\\begin{bmatrix}R&space;&&space;0&space;\\\\&space;[p]R&space;&&space;R&space;\\\\\\end{bmatrix}\\in&space;\\mathbb{R}^{6\\times6}\" title=\"https://latex.codecogs.com/svg.image?\\begin{bmatrix}Ad_T\\end{bmatrix}=\\begin{bmatrix}R & 0 \\\\ [p]R & R \\\\\\end{bmatrix}\\in \\mathbb{R}^{6\\times6}\" />\n",
+    "\n",
+    "which enable us the subscribe cancaltion \n",
+    "\n",
+    "<img src=\"https://latex.codecogs.com/svg.image?\\nu_a=[Ad_T_{ab}]\\nu_{b}\" title=\"https://latex.codecogs.com/svg.image?\\nu_a=[Ad_T_{ab}]\\nu_{b}\" />\n",
+    "for chaining the frame of reference\n",
+    "\n",
+    "<br/>\n",
+    "<br/>\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "For angular velocity we had:\n",
+    "<br/>\n",
+    "<br/>\n",
+    "<img src=\"https://latex.codecogs.com/svg.image?\\dot{R_{sb}}&space;=[\\omega_s]R_{sb}\" title=\"https://latex.codecogs.com/svg.image?\\dot{R_{sb}} =[\\omega_s]R_{sb}\" />\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "<img src=\"https://latex.codecogs.com/svg.image?\\dot{R_{sb}}R_{sb}^{-1}&space;=[\\omega_s]\\in&space;so(3)\" title=\"https://latex.codecogs.com/svg.image?\\dot{R_{sb}}R_{sb}^{-1} =[\\omega_s]\\in so(3)\" />\n",
+    "<br/>\n",
+    "<br/>\n",
+    "similarly for twist we have:\n",
+    "\n",
+    "\n",
+    "<br/>\n",
+    "<br/>\n",
+    "\n",
+    "<img src=\"https://latex.codecogs.com/svg.image?\\dot{T_{sb}}T_{sb}^{-1}=\\begin{bmatrix}&space;[\\omega_s]&space;&&space;v_s&space;\\\\&space;0&&space;&space;0\\\\\\end{bmatrix}&space;=[\\nu_s]\\in&space;se(3)\" title=\"https://latex.codecogs.com/svg.image?\\dot{T_{sb}}T_{sb}^{-1}=\\begin{bmatrix} [\\omega_s] & v_s \\\\ 0& 0\\\\\\end{bmatrix} =[\\nu_s]\\in se(3)\" />\n",
+    "\n",
+    "\n",
+    "\n",
+    "## Representing Robot Pose\n",
+    "\n",
+    "\n",
+    "<img src=\"../images/representing_robot_pose1.png\" width=\"50%\" height=\"50%\" />\n",
+    "\n",
+    "Refs: [1](https://web.archive.org/web/20161029231029/https://paulfurgale.info/news/2014/6/9/representing-robot-pose-the-good-the-bad-and-the-ugly)\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
