reun + opencv sfm in python updated/ clean up

--- a/docs/rerun.ipynb
+++ b/docs/rerun.ipynb
@@ -5,7 +5,7 @@
    "id": "56e4d9e9-bfa0-45ec-9c41-3ce70e0c60de",
    "metadata": {},
    "source": [
-    "# Basic concepts (very important)\n",
+    "# Basic concepts\n",
     "\n",
     "### Entity path\n",
     "\n",
@@ -17,7 +17,7 @@
     "\n",
     "Like ROS topics, but hierarchical.\n",
     "\n",
-    "### Time\n",
+    "# Time\n",
     "\n",
     "You explicitly set time:\n",
     "\n",
@@ -35,34 +35,8 @@
     "\n",
     "---\n",
     "\n",
-    "# Hello World (Python & C++)\n",
-    "\n",
-    "## Python\n",
-    "\n",
-    "```python\n",
-    "import rerun as rr\n",
-    "\n",
-    "rr.init(\"rerun_demo\", spawn=True)\n",
-    "\n",
-    "rr.log(\"text\", rr.TextLog(\"Hello Rerun\"))\n",
-    "```\n",
-    "\n",
-    "## C++\n",
-    "\n",
-    "```cpp\n",
-    "#include <rerun.hpp>\n",
-    "\n",
-    "int main() {\n",
-    "    rerun::init(\"rerun_demo\", /*spawn=*/true);\n",
-    "    rerun::log(\"text\", rerun::TextLog(\"Hello Rerun\"));\n",
-    "}\n",
-    "```\n",
-    "\n",
-    "---\n",
-    "\n",
     "# Logging Images\n",
     "\n",
-    "## Python\n",
     "\n",
     "```python\n",
     "import rerun as rr\n",
@@ -77,7 +51,8 @@
     "rr.log(\"camera/image\", rr.Image(img))\n",
     "```\n",
     "\n",
-    "## C++\n",
+    "---\n",
+    "\n",
     "\n",
     "```cpp\n",
     "#include <rerun.hpp>\n",
@@ -94,13 +69,12 @@
     "\n",
     "---\n",
     "\n",
-    "# 6. Video (image sequence over time)\n",
+    "#  Video (image sequence over time)\n",
     "\n",
     "### Key idea:\n",
     "\n",
     "**Video = images + time**\n",
     "\n",
-    "## Python\n",
     "\n",
     "```python\n",
     "cap = cv2.VideoCapture(\"video.mp4\")\n",
@@ -113,13 +87,14 @@
     "\n",
     "    frame = cv2.cvtColor(frame, cv2.COLOR_BGR2RGB)\n",
     "\n",
-    "    rr.set_time_sequence(\"frame\", frame_idx)\n",
+    "    rr.set_time(\"frame\", frame_idx)\n",
     "    rr.log(\"camera/image\", rr.Image(frame))\n",
     "\n",
     "    frame_idx += 1\n",
     "```\n",
     "\n",
-    "## C++\n",
+    "---\n",
+    "\n",
     "\n",
     "```cpp\n",
     "cv::VideoCapture cap(\"video.mp4\");\n",
@@ -142,9 +117,9 @@
     "\n",
     "---\n",
     "\n",
-    "# 7. 2D & 3D Points\n",
+    "#  2D & 3D Points\n",
     "\n",
-    "## 2D keypoints (Python)\n",
+    "## 2D keypoints\n",
     "\n",
     "```python\n",
     "pts = np.array([[100, 50], [120, 80], [200, 90]])\n",
@@ -155,7 +130,7 @@
     ")\n",
     "```\n",
     "\n",
-    "## 3D point cloud (Python)\n",
+    "## 3D point cloud\n",
     "\n",
     "```python\n",
     "points = np.random.randn(1000, 3)\n",
@@ -166,7 +141,7 @@
     ")\n",
     "```\n",
     "\n",
-    "## C++\n",
+    "---\n",
     "\n",
     "```cpp\n",
     "std::vector<rerun::Vec3D> points;\n",
@@ -179,11 +154,11 @@
     "\n",
     "---\n",
     "\n",
-    "# 8. Shapes (Lines, Boxes, Arrows)\n",
+    "#  Shapes (Lines, Boxes, Arrows)\n",
     "\n",
     "## Line strip (trajectory)\n",
     "\n",
-    "### Python\n",
+    "\n",
     "\n",
     "```python\n",
     "trajectory = np.cumsum(np.random.randn(100, 3) * 0.1, axis=0)\n",
@@ -194,7 +169,8 @@
     ")\n",
     "```\n",
     "\n",
-    "### C++\n",
+    "---\n",
+    "\n",
     "\n",
     "```cpp\n",
     "std::vector<rerun::Vec3D> traj;\n",
@@ -221,19 +197,18 @@
     "\n",
     "---\n",
     "\n",
-    "# 9. Camera (THIS IS CRUCIAL)\n",
+    "#  Camera\n",
     "\n",
-    "Rerun treats cameras **explicitly** — perfect for SLAM.\n",
+    "Rerun treats cameras **explicitly**\n",
     "\n",
     "---\n",
     "\n",
-    "## 9.1 Camera intrinsics\n",
+    "## Camera intrinsics\n",
     "\n",
-    "### Python\n",
     "\n",
     "```python\n",
     "rr.log(\n",
-    "    \"camera\",\n",
+    "    \"world/camera\",\n",
     "    rr.Pinhole(\n",
     "        resolution=[640, 480],\n",
     "        focal_length=[500, 500],\n",
@@ -242,11 +217,12 @@
     ")\n",
     "```\n",
     "\n",
-    "### C++\n",
+    "---\n",
+    "\n",
     "\n",
     "```cpp\n",
     "rerun::log(\n",
-    "    \"camera\",\n",
+    "    \"world/camera\",\n",
     "    rerun::Pinhole(\n",
     "        {640, 480},\n",
     "        {500.0f, 500.0f},\n",
@@ -257,15 +233,15 @@
     "\n",
     "---\n",
     "\n",
-    "## 9.2 Camera pose (extrinsics)\n",
+    "## Camera pose (extrinsics)\n",
     "\n",
     "Camera pose = transform in world.\n",
     "\n",
-    "### Python\n",
+    "\n",
     "\n",
     "```python\n",
     "rr.log(\n",
-    "    \"camera\",\n",
+    "    \"world/camera\",\n",
     "    rr.Transform3D(\n",
     "        translation=[0, 0, 1],\n",
     "        rotation=rr.Quaternion(xyzw=[0,0,0,1])\n",
@@ -273,11 +249,11 @@
     ")\n",
     "```\n",
     "\n",
-    "### C++\n",
+    "---\n",
     "\n",
     "```cpp\n",
     "rerun::log(\n",
-    "    \"camera\",\n",
+    "    \"world/camera\",\n",
     "    rerun::Transform3D(\n",
     "        rerun::Vec3D{0,0,1},\n",
     "        rerun::Quaternion{0,0,0,1}\n",
@@ -287,61 +263,7 @@
     "\n",
     "---\n",
     "\n",
-    "# 10. Camera rays (what you explicitly asked)\n",
-    "\n",
-    "Camera rays = **Lines3D from camera center through pixels**\n",
-    "\n",
-    "---\n",
-    "\n",
-    "## Python: Rays through selected pixels\n",
-    "\n",
-    "```python\n",
-    "camera_origin = np.array([0, 0, 0])\n",
-    "\n",
-    "pixels = np.array([\n",
-    "    [320, 240],\n",
-    "    [400, 240],\n",
-    "    [320, 300],\n",
-    "])\n",
-    "\n",
-    "directions = np.array([\n",
-    "    [0, 0, 1],\n",
-    "    [0.1, 0, 1],\n",
-    "    [0, 0.1, 1],\n",
-    "])\n",
-    "\n",
-    "directions /= np.linalg.norm(directions, axis=1, keepdims=True)\n",
-    "\n",
-    "rays = []\n",
-    "for d in directions:\n",
-    "    rays.append([camera_origin, camera_origin + d * 5])\n",
-    "\n",
-    "rr.log(\n",
-    "    \"camera/rays\",\n",
-    "    rr.LineStrips3D(rays)\n",
-    ")\n",
-    "```\n",
-    "\n",
-    "---\n",
-    "\n",
-    "## C++: Camera rays\n",
-    "\n",
-    "```cpp\n",
-    "std::vector<std::vector<rerun::Vec3D>> rays;\n",
-    "\n",
-    "rerun::Vec3D origin{0,0,0};\n",
-    "rerun::Vec3D dir{0.1f, 0.0f, 1.0f};\n",
-    "\n",
-    "rays.push_back({origin, origin + dir * 5.0f});\n",
-    "\n",
-    "rerun::log(\"camera/rays\", rerun::LineStrips3D(rays));\n",
-    "```\n",
-    "\n",
-    "---\n",
-    "\n",
-    "# 11. Hover → ray interaction (your memory)\n",
-    "\n",
-    "What you remembered:\n",
+    "# Camera rays \n",
     "\n",
     "* **hovering pixel → ray**\n",
     "* requires:\n",
@@ -349,84 +271,305 @@
     "  * image\n",
     "  * pinhole\n",
     "  * transform\n",
-    "  * same entity path\n",
     "\n",
-    "If you log **image + pinhole + transform** under `\"camera\"`:\n",
-    "\n",
-    "```text\n",
-    "camera/image\n",
-    "camera (Pinhole)\n",
-    "camera (Transform3D)\n",
-    "```\n",
-    "\n",
-    "Rerun automatically enables:\n",
+    "If you log **image + pinhole + transform** under `\"world/camera\"`, Rerun automatically enables:\n",
     "\n",
     "* pixel hover\n",
     "* ray visualization\n",
     "* projection into 3D\n",
-    "\n",
-    "This is **not a toggle** — it’s **data-driven**.\n",
-    "\n",
     "---\n",
     "\n",
-    "# 12. Recommended structure for SLAM / VO\n",
-    "\n",
-    "```text\n",
-    "world/\n",
-    " ├─ points\n",
-    " ├─ trajectory\n",
-    "camera/\n",
-    " ├─ image\n",
-    " ├─ keypoints\n",
-    " ├─ rays\n",
-    " ├─ (Pinhole)\n",
-    " ├─ (Transform3D)\n",
-    "```\n",
-    "\n",
-    "Time axis:\n",
-    "\n",
-    "```text\n",
-    "frame = k\n",
-    "```\n",
-    "\n",
-    "---\n",
-    "\n",
-    "# 13. Common mistakes (very common)\n",
-    "\n",
-    "❌ Logging image without pinhole\n",
-    "❌ Logging pose under different entity path\n",
-    "❌ Forgetting to set time\n",
-    "❌ Mixing camera frame vs world frame\n",
-    "\n",
-    "---\n",
-    "\n",
-    "# 14. Minimal SLAM-style loop (Python)\n",
     "\n",
     "```python\n",
-    "rr.init(\"slam\", spawn=True)\n",
+    "import rerun as rr\n",
+    "import time\n",
+    "import numpy as np\n",
+    "import cv2\n",
     "\n",
-    "for k in range(100):\n",
-    "    rr.set_time_sequence(\"frame\", k)\n",
+    "rr.init(\"image_demo\", spawn=True)\n",
     "\n",
-    "    rr.log(\"camera\", rr.Transform3D(translation=[0, 0, k*0.1]))\n",
-    "    rr.log(\"camera/image\", rr.Image(image))\n",
-    "    rr.log(\"world/points\", rr.Points3D(points[k]))\n",
+    "rr.log(\"world\", rr.ViewCoordinates.RIGHT_HAND_Z_UP, static=True)\n",
+    "\n",
+    "rr.log(\n",
+    "    \"world/axes\",\n",
+    "    rr.Arrows3D(\n",
+    "        vectors=[[1, 0, 0], [0, 1, 0], [0, 0, 1]],\n",
+    "        colors=[[255, 0, 0], [0, 255, 0], [0, 0, 255]],\n",
+    "    ),\n",
+    ")\n",
+    "\n",
+    "\n",
+    "rr.log(\n",
+    "    \"world/camera\",\n",
+    "    rr.Pinhole(\n",
+    "        resolution=[640, 480],\n",
+    "        focal_length=[500, 500],\n",
+    "        principal_point=[320, 240]\n",
+    "    )\n",
+    ")\n",
+    "\n",
+    "rr.log(\n",
+    "    \"world/camera\",\n",
+    "    rr.Transform3D(\n",
+    "        translation=[0, 0, 1],\n",
+    "        rotation=rr.Quaternion(xyzw=[0, 0, 0, 1])\n",
+    "    )\n",
+    ")\n",
+    "\n",
+    "\n",
+    "img = cv2.imread(\"iamge.png\")\n",
+    "img = cv2.cvtColor(img, cv2.COLOR_BGR2RGB)\n",
+    "\n",
+    "rr.log(\"world/camera\", rr.Image(img))\n",
+    "\n",
     "```\n",
     "\n",
-    "---\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ab510490-edf7-4174-99ed-bb13c4c1edf7",
+   "metadata": {},
+   "source": [
+    "# Rerun View Coordinates\n",
     "\n",
-    "# 15. What I can do next for you\n",
+    "`rr.ViewCoordinates` is an archetype you log to define the **semantic meaning** of the X, Y, and Z axes.\n",
+    "This tells the Rerun Viewer how to interpret your coordinate system, which affects.\n",
     "\n",
-    "If you want, I can:\n",
+    "It does **not** transform or flip your actual point positions — it only influences how the viewer orients the scene for better usability.\n",
     "\n",
-    "✅ build a **full VO / SLAM Rerun template**\n",
-    "✅ show **projecting 3D points into image**\n",
-    "✅ show **feature tracks across frames**\n",
-    "✅ integrate **OpenCV + Eigen + Sophus**\n",
-    "✅ show **IMU + camera frames**\n",
-    "✅ replicate **KITTI-style visualization**\n",
+    "### Specific Constants\n",
     "\n",
-    "Just tell me which one you want next.\n"
+    "**Rerun** Default\n",
+    "- **`rr.ViewCoordinates.RIGHT_HAND_Z_UP`**  \n",
+    "  Defines the axes as: **X = Right**, **Y = Forward**, **Z = Up**\n",
+    "\n",
+    "\n",
+    "\n",
+    "**OpenCV** (RDF: Right-Down-Forward) convention:\n",
+    "- **`rr.ViewCoordinates.RIGHT_HAND_Y_DOWN`**  \n",
+    "  Defines the axes as: **X = Right**, **Y = Down**, **Z = Forward**  \n",
+    "  \n",
+    "```python\n",
+    "rr.log(\"world\", rr.ViewCoordinates.RIGHT_HAND_Y_DOWN, static=True)\n",
+    "\n",
+    "rr.log(\"world/points\",\n",
+    "       rr.Points3D([[0, 0, 0], [1, 0, 0], [0, 0, 4]], radii=0.2))\n",
+    "\n",
+    "\n",
+    "rr.log(\n",
+    "    \"world/axes\",\n",
+    "    rr.Arrows3D(\n",
+    "        vectors=[[1, 0, 0], [0, 1, 0], [0, 0, 1]],\n",
+    "        colors=[[255, 0, 0], [0, 255, 0], [0, 0, 255]],\n",
+    "    ),\n",
+    ")\n",
+    "\n",
+    "```\n",
+    "<img src=\"images/rerun_RDF_opencv_coordinate.png\" />\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "95c7b74c-e917-43a1-b86c-48a873515fe0",
+   "metadata": {},
+   "source": [
+    "# OpenCV Images in Rerun\n",
+    "\n",
+    "\n",
+    "Rerun world:\n",
+    "\n",
+    "```\n",
+    "X → right\n",
+    "Y → forward\n",
+    "Z → up\n",
+    "```\n",
+    "\n",
+    "OpenCV:\n",
+    "\n",
+    "```\n",
+    "X → right\n",
+    "Y → down\n",
+    "Z → forward\n",
+    "```\n",
+    "\n",
+    "### Position\n",
+    "\n",
+    "```\n",
+    "X_rerun =  X_cv\n",
+    "Y_rerun =  Z_cv\n",
+    "Z_rerun = -Y_cv\n",
+    "```\n",
+    "\n",
+    "### Rotation\n",
+    "\n",
+    "$$\n",
+    "R_{\\text{rerun}\\leftarrow\\text{cv}} =\n",
+    "\\begin{bmatrix}\n",
+    "1 & 0 & 0  \\\\\n",
+    "0 & 0 & 1  \\\\\n",
+    "0 & -1 & 0\n",
+    "\\end{bmatrix}\n",
+    "$$\n",
+    "\n",
+    "For integrating OpenCV camera data with Rerun when you want a **Z-up world** (common in robotics, AR, etc.).\n",
+    "\n",
+    "```python\n",
+    "points_cv = np.array([\n",
+    "    [0.0,  0.0, 2.0],   # straight ahead\n",
+    "    [0.5,  0.0, 2.0],   # right\n",
+    "    [-0.5, 0.0, 2.0],   # left\n",
+    "    [0.0,  0.5, 2.0],   # down\n",
+    "])\n",
+    "\n",
+    "# ============================================================\n",
+    "# Convert OpenCV → Rerun world\n",
+    "# World: X=right, Y=forward, Z=up\n",
+    "# ============================================================\n",
+    "points_world = np.column_stack([\n",
+    "    points_cv[:, 0],    # X stays X\n",
+    "    points_cv[:, 2],    # Z (forward) → Y\n",
+    "    -points_cv[:, 1],   # -Y (down) → Z (up)\n",
+    "])\n",
+    "\n",
+    "```\n",
+    "\n",
+    "\n",
+    "\n",
+    "### Should you instead \"just choose Z down\" (e.g., make world Y-down)?\n",
+    "No — only if you specifically want a Y-down world (e.g., matching some simulations or datasets). But:\n",
+    "- It would require **no point transformation** (you could log points_cv directly).\n",
+    "- You'd change the world to something like `rr.ViewCoordinates.RIGHT_HAND_Y_DOWN` (X right, Y down, Z forward).\n",
+    "- The camera pose could be identity (camera forward = +Z_world).\n",
+    "- However, you'd lose the natural \"Z up\" viewing experience in Rerun's 3D viewer for ground-plane robotics/AR scenarios.\n",
+    "\n",
+    "Your current approach (transform points + pose, keep Z-up world) is more common and flexible when working with real-world upward gravity."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a862d86c-1eec-410a-88d3-2b13dabefac5",
+   "metadata": {},
+   "source": [
+    "# How to Animate Objects in Rerun\n",
+    "\n",
+    "Animating objects (like a camera, robot, or points) in a Rerun scene is simple and powerful thanks to its timeline-based logging.\n",
+    "\n",
+    "The key idea: **log the same entity path at different times** with updated transforms or data.\n",
+    "\n",
+    "\n",
+    "1. **Set a timeline** for each frame:  \n",
+    "   Use `rr.set_time(\"frame\", frame_idx)`  before logging data in a loop.\n",
+    "\n",
+    "2. **Log time-varying data** to the same entity path:  \n",
+    "   For a moving object (e.g., a camera), repeatedly log a `rr.Transform3D` with new translation/rotation:\n",
+    "   ```python\n",
+    "   rr.log(\"world/camera\", rr.Transform3D(\n",
+    "       translation=[x, y, z],\n",
+    "       rotation=rr.Quaternion(xyzw=[qx, qy, qz, qw])\n",
+    "   ))\n",
+    "   ```\n",
+    "\n",
+    "3. **Log associated data** (images, points, etc.) at the same timestamp:  \n",
+    "   They will automatically synchronize with the transform.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "74635475-152c-4d03-8b26-4ac22818e6bd",
+   "metadata": {},
+   "source": [
+    "```python\n",
+    "import rerun.blueprint as rrb\n",
+    "import rerun as rr\n",
+    "import cv2\n",
+    "import numpy as np\n",
+    "import time\n",
+    "from pathlib import Path\n",
+    "\n",
+    "\n",
+    "rr.init(\"rerun_demo\", spawn=True)\n",
+    "rr.log(\"world/xyz\", rr.Arrows3D(vectors=[[1, 0, 0], [0, 1, 0],\n",
+    "       [0, 0, 1]], colors=[[255, 0, 0], [0, 255, 0], [0, 0, 255]],),)\n",
+    "\n",
+    "\n",
+    "# ============================================================================\n",
+    "# Setup Camera and Webcam\n",
+    "# ============================================================================\n",
+    "resolution = [1280, 720]\n",
+    "fx = 848.53117539872062\n",
+    "fy = 848.53117539872062\n",
+    "cx = 639.5\n",
+    "cy = 359.5\n",
+    "\n",
+    "cap = cv2.VideoCapture(0)\n",
+    "# Set camera resolution to 1280x720\n",
+    "cap.set(cv2.CAP_PROP_FRAME_WIDTH, resolution[0])\n",
+    "cap.set(cv2.CAP_PROP_FRAME_HEIGHT, resolution[1])\n",
+    "\n",
+    "# Open a video file (alternative)\n",
+    "# cap = cv2.VideoCapture(\"video.mp4\")\n",
+    "\n",
+    "entity_path = \"world/camera\"\n",
+    "\n",
+    "# Log camera intrinsics (static - only once)\n",
+    "rr.log(\n",
+    "    entity_path,\n",
+    "    rr.Pinhole(\n",
+    "        resolution=[resolution[0], resolution[1]],\n",
+    "        focal_length=[fx, fy],\n",
+    "        principal_point=[cx, cy],\n",
+    "        # Distance from camera origin to image plane for 3D visualization\n",
+    "        image_plane_distance=1.0,\n",
+    "        color=[255, 128, 0],  # Orange color for camera frustum\n",
+    "        line_width=0.003  # Width of camera frustum lines\n",
+    "    ),\n",
+    "    static=True  # Camera intrinsics are static\n",
+    ")\n",
+    "\n",
+    "# ============================================================================\n",
+    "# Live webcam feed with animated camera position\n",
+    "# ============================================================================\n",
+    "num_frames = 90  # Number of frames to capture\n",
+    "\n",
+    "for frame_idx in range(num_frames):\n",
+    "    # Set time for this frame\n",
+    "    rr.set_time(\"frame\", sequence=frame_idx)\n",
+    "\n",
+    "    # Read webcam frame\n",
+    "    ret, frame = cap.read()\n",
+    "    if not ret:\n",
+    "        print(\"Failed to read frame from webcam\")\n",
+    "        break\n",
+    "\n",
+    "    # Convert BGR to RGB for Rerun\n",
+    "    img_rgb = cv2.cvtColor(frame, cv2.COLOR_BGR2RGB)\n",
+    "\n",
+    "    # Log image to camera (this will display in camera view)\n",
+    "    rr.log(entity_path, rr.Image(img_rgb))\n",
+    "\n",
+    "    # Update camera position (animate in world)\n",
+    "    # Move camera along X-axis over time\n",
+    "    translation = [0.02 * frame_idx, 0, 1]\n",
+    "    rr.log(\n",
+    "        entity_path,\n",
+    "        rr.Transform3D(\n",
+    "            translation=translation,\n",
+    "            rotation=rr.Quaternion(xyzw=[0, 0, 0, 1])\n",
+    "        )\n",
+    "    )\n",
+    "\n",
+    "    # Small delay to allow Rerun to process and control frame rate\n",
+    "    time.sleep(0.1)\n",
+    "\n",
+    "# Release webcam\n",
+    "cap.release()\n",
+    "print(f\"Captured {num_frames} frames\")\n",
+    "\n",
+    "\n",
+    "```"
    ]
   }
  ],
