--- a/docs/lie_group_lie_algebra/index.ipynb
+++ b/docs/lie_group_lie_algebra/index.ipynb
@@ -3174,6 +3174,29 @@
     "Refs: [1](https://web.archive.org/web/20161029231029/https://paulfurgale.info/news/2014/6/9/representing-robot-pose-the-good-the-bad-and-the-ugly)\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "627ee08a-e788-4de9-ba1b-1f5ce6a945ba",
+   "metadata": {},
+   "source": [
+    "### Lie groups used in robotics (not exhaustive)\n",
+    "\n",
+    "| Lie group | Manifold | Size | Dim | $\\mathcal{X} \\in \\mathcal{M}$ | Constraint | Lie algebra | Tangent | $\\exp(\\tau)$ | Composition | Action |\n",
+    "|----------|----------|------|-----|-------------------------------|------------|-------------|----------|---------------|-------------|--------|\n",
+    "| $n$-D vector | $\\mathbb{R}^n$ | $n$ | $n$ | $\\mathbf{v} \\in \\mathbb{R}^n$ | $\\mathbf{v}-\\mathbf{v}=0$ | $\\mathbb{R}^n$ | $\\tau \\in \\mathbb{R}^n$ | $\\mathbf{v}=\\exp(\\tau)$ | $\\mathbf{v}_1+\\mathbf{v}_2$ | $\\mathbf{v}+\\mathbf{x}$ |\n",
+    "| Circle | $S^1$ | $2$ | $1$ | $z \\in \\mathbb{C}$ | $z^\\ast z = 1$ | $i\\theta$ | $\\theta \\in \\mathbb{R}$ | $z=\\exp(i\\theta)$ | $z_1 z_2$ | $z\\,x$ |\n",
+    "| Rotation | $SO(2)$ | $4$ | $1$ | $R \\in \\mathbb{R}^{2\\times2}$ | $R^\\top R = I$ | $[\\theta]_\\times$ | $\\theta \\in \\mathbb{R}$ | $R=\\exp([\\theta]_\\times)$ | $R_1R_2$ | $R\\,\\mathbf{x}$ |\n",
+    "| Rigid motion | $SE(2)$ | $9$ | $3$ | $\\begin{bmatrix}R & t\\\\0&1\\end{bmatrix}$ | $R^\\top R = I$ | $\\mathfrak{se}(2)$ | $\\tau\\in\\mathbb{R}^3$ | $\\exp\\!\\left(\\begin{bmatrix}[\\theta]_\\times & \\rho\\\\0&0\\end{bmatrix}\\right)$ | $M_1M_2$ | $R\\mathbf{x}+t$ |\n",
+    "| 3-sphere | $S^3$ | $4$ | $3$ | $q\\in\\mathbb{H}$ | $q^\\ast q=1$ | $\\theta/2$ | $\\theta\\in\\mathbb{R}^3$ | $q=\\exp(\\theta/2)$ | $q_1q_2$ | $q\\,x\\,q^\\ast$ |\n",
+    "| Rotation | $SO(3)$ | $9$ | $3$ | $R\\in\\mathbb{R}^{3\\times3}$ | $R^\\top R=I$ | $[\\theta]_\\times$ | $\\theta\\in\\mathbb{R}^3$ | $R=\\exp([\\theta]_\\times)$ | $R_1R_2$ | $R\\,\\mathbf{x}$ |\n",
+    "| Rigid motion | $SE(3)$ | $16$ | $6$ | $\\begin{bmatrix}R&t\\\\0&1\\end{bmatrix}$ | $R^\\top R=I$ | $\\mathfrak{se}(3)$ | $\\tau\\in\\mathbb{R}^6$ | $\\exp\\!\\left(\\begin{bmatrix}[\\theta]_\\times & \\rho\\\\0&0\\end{bmatrix}\\right)$ | $M_1M_2$ | $R\\mathbf{x}+t$ |\n",
+    "\n",
+    "**Notes**\n",
+    "- $\\mathrm{Sim}(2), \\mathrm{Sim}(3)$: motion + scale (monocular SLAM)\n",
+    "- $\\mathrm{SE}_2(3)$: IMU preintegration and inertial SLAM\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
@@ -3192,7 +3215,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.13.11"
   }
  },
  "nbformat": 4,
