--- a/docs/slam/pose_graph_slam.ipynb
+++ b/docs/slam/pose_graph_slam.ipynb
@@ -1929,23 +1929,20 @@
     "4. Solve $H\\Delta x=-b$\n",
     "5. Update all variable poses\n",
     "6. Check stop condition (e.g., $|\\Delta x|$ small or cost reduction small)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2f9a0ec7-8cc7-476c-ac2e-25652c1cfe80",
+   "metadata": {},
+   "source": [
     "\n",
-    "If you want, I can also compute the **new loop-closure residual after this first update** and show the cost decrease:\n",
-    "$$\n",
-    "\\chi^2 = \\sum_{(i,j)} e_{ij}^T\\Omega_{ij}e_{ij}\n",
-    "$$\n",
-    "(using your Ω values).\n",
+    "<img src=\"images/building_the_linear_system.png\" width=\"40%\"  height=\"40%\"/>\n",
     "\n",
-    "\n",
-    "**Key changes made:**\n",
-    "1. Replaced all `(` with `$` for inline math\n",
-    "2. Replaced all `[` with `$$` for display math\n",
-    "3. Removed the `=====` decorations from under equations\n",
-    "4. Fixed matrix formatting and alignment\n",
-    "5. Properly escaped all LaTeX commands\n",
-    "6. Added proper line breaks in matrices\n",
-    "\n",
-    "This version should render correctly in Jupyter Notebook."
+    "<img src=\"images/b_h.png\" width=\"40%\"  height=\"40%\"/>\n",
+    "<img src=\"images/b_i_j_h_i_j.png\"  width=\"40%\"  height=\"40%\" />\n",
+    "<img src=\"images/J_i_j.png\"  width=\"40%\"  height=\"40%\"/>"
    ]
   },
   {
