--- a/docs/slam/sfm.ipynb
+++ b/docs/slam/sfm.ipynb
@@ -2,6 +2,16 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "6487871c-11be-47af-85f3-a0ceb34bbb46",
+   "metadata": {},
+   "source": [
+    "<img src=\"images/real.gif\" />\n",
+    "\n",
+    "<img src=\"images/virtual.gif\" />"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "78d681ec-532b-4ea5-9690-6c305e6d3bf6",
    "metadata": {},
    "source": [
