--- a/docs/factor_graph_gtsam_isam2.ipynb
+++ b/docs/factor_graph_gtsam_isam2.ipynb
@@ -2,6 +2,15 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "a0540e10-f4ec-490b-bd45-1ac2752b224c",
+   "metadata": {},
+   "source": [
+    "##  Factor Graphs and Robust Perception | Michael Kaess \n",
+    "Refs: [1](https://youtu.be/JmR2YpkLNt0?t=1124)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "d859cb41-3d26-4b2a-9eb0-ab96d7ac55d9",
    "metadata": {},
    "source": [
